--- a/frontend-vue/.gitignore
+++ b/frontend-vue/.gitignore
@@ -1,24 +1,5 @@
-# Logs
-logs
+/dist
+/node_modules
 *.log
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-pnpm-debug.log*
-lerna-debug.log*
-
-node_modules
-dist
-dist-ssr
-*.local
-
-# Editor directories and files
-.vscode/*
-!.vscode/extensions.json
-.idea
-.DS_Store
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-*.sw?
+**/.cache
+*.DS_Store
