--- a/frontend-vue/package.json
+++ b/frontend-vue/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.6",
     "aos": "^2.3.4",
+    "axios": "^1.9.0",
     "tailwindcss": "^4.1.6",
     "vue": "^3.5.13",
     "vue-router": "^4.5.1"
