--- a/frontend-vue/package.json
+++ b/frontend-vue/package.json
@@ -14,7 +14,8 @@
     "axios": "^1.9.0",
     "tailwindcss": "^4.1.6",
     "vue": "^3.5.13",
-    "vue-router": "^4.5.1"
+    "vue-router": "^4.5.1",
+    "vue-toastification": "^2.0.0-rc.5"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.2.3",
