--- a/frontend-vue/package.json
+++ b/frontend-vue/package.json
@@ -9,9 +9,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@monaco-editor/loader": "^1.5.0",
     "@tailwindcss/vite": "^4.1.6",
     "aos": "^2.3.4",
     "axios": "^1.9.0",
+    "monaco-editor": "^0.52.2",
     "tailwindcss": "^4.1.6",
     "vue": "^3.5.13",
     "vue-router": "^4.5.1",
